# IntFar

./: .dockerignore  .gitignore  .htaccess  Dockerfile  Nyt tekstdokument.txt  README.md  add_shop_items.py  betting_events.sql  copy_again.py  download_all_games.py  download_emojis.py  download_previous_cs_games.py  errorlog.txt  gbp_before_wipe.txt  index.php  main.py  maps.json  pyproject.toml  query_db.py  remove_game_info.py  requirements.txt  run.sh  run_flask.py  run_steam.py  run_tests.py  save_stats_manually.py  schema.sql  test.py  test_db.py  test_q.sql  test_query.sql  todo.md  todo.txt  train_classifier.py  write_as_intfar.py
ai/: data.py  model.py  train.py  validate_classifier.py
api/: audio_handler.py  award_qualifiers.py  bets.py  betting.py  config.py  database.py  game_api_client.py  game_database.py  game_monitor.py  game_stats.py  lan.py  lists.py  meta_database.py  proxy.py  register.py  riot_api.py  shop.py  steam_api.py  user.py  util.py
api/awards/: __init__.py  cs2.py  csgo.py  lol.py
api/bets/: __init__.py  csgo.py  lol.py
api/game_api/: __init__.py  cs2.py  csgo.py  lol.py
api/game_apis/: __init__.py  cs2.py  lol.py
api/game_data/: __init__.py  cs2.py  csgo.py  lol.py
api/game_database/: __init__.py  cs2.py  lol.py
api/game_databases/: __init__.py  cs2.py  csgo.py  lol.py
api/game_monitoring/: cs2.py  csgo.py  lol.py
api/game_monitors/: __init__.py  cs2.py  lol.py
app/: init.py  user.py  util.py
app/routes/: about.py  api.py  betting.py  doinks.py  errors.py  index.py  jeopardy.py  lan.py  lists.py  quiz.py  register_cs2.py  register_csgo.py  soundboard.py  stats.py  users.py  verify.py
app/templates/: about.html  bets_list_entry.html  betting.html  doinks.html  error.html  head.html  index.html  intfar_list_entry.html  lan.html  list_view.html  lists.html  navbar.html  no_user.html  not_implemented.html  profile.html  quiz.html  quiz_score.html  register_cs2.html  register_csgo.html  soundboard.html  stats.html  under_construction.html  verify.html
discbot/: app_listener.py  commands.py  copy_again.py  discord_bot.py  get_emotes.py  montly_intfar.py  save_stats_manually.py
discbot/commands/: __init__.py  admin.py  bets.py  doinks.py  intfar.py  lan.py  lists.py  meta.py  misc.py  shop.py  sounds.py  stats.py  util.py
discbot/test/: generate_data.py  test_bets.py
flavor_texts/: doinks.txt  doinks_damage.txt  doinks_penta.txt  doinks_vision_score.txt  flirt_english.txt  lowest_kda.txt  lowest_kp.txt  lowest_vision.txt  mentions_low_cs_min.txt  mentions_low_damage.txt  mentions_no_epic_monsters.txt  mentions_no_vision_ward.txt  most_deaths.txt  no_intfar.txt  redeeming_actions.txt  streak.txt
migrations/: 22_10_25.py  27_01_24.py  30_08_23.py
resources/: lol_data.json  schema.sql  skins.csv  team_comps.txt  user_agent.txt
resources/database_schemas/: csgo.sql  meta.sql
src/: add_user.py  announce_ifotm.py  bets.py  cli.py  config.py  copy_again.py  database.py  discord_bot.py  download_cs2_demos.py  game_stats.py  generate_champ_data.py  get_emotes.py  main.py  montly_intfar.py  process_handler.py  query_db.py  remove_game_info.py  riot_api.py  run_command.py  run_discord_bot.py  run_flask.py  run_steam.py  run_tests.py  salvage_cs2.py  save_stats_manually.py  scaffold_lan.py  test.py  test123lol.py  util.py  write_as_intfar.py
src/ai/: data.py  (+1 more)
test/: assertion.py  generate_data.py  runner.py  test_bets.py  test_database.py  test_intfar.py  test_lan.py  test_misc.py  test_pipe.py  test_shop.py  test_steam.py
tests/: base_test_executor.py  conftest.py  mock_client.py  test_bets.py  test_database.py  test_intfar.py  test_jeopardy.py  test_lan.py  test_misc.py  test_shop.py  test_steam.py
(+409 files in other folders)
