[project]
name = "intfar"
version = "1.1.0"
description = "Int-Far - Now with PDM"
authors = [
    {name = "Mikkel Sørensen", email = "m_hooge@hotmail.com"},
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "discord-py>=2.3.2",
    "flask>=2.3.2",
    "flask-cors>=3.0.10",
    "PyNaCl>=1.5.0",
    "python-dateutil>=2.8.2",
    "protobuf~=3.0",
    "csgo>=1.0.0",
    "Levenshtein>=0.24.0",
    "gevent>=23.9.1",
    "mhooge-flask @ git+https://github.com/mhso/mhooge-flask.git",
    "polars>=0.20.31",
    "freezegun>=1.5.1",
    "opencv-python>=4.10.0.84",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2,<=0.28.1",
    "steam @ git+https://github.com/mhso/steam.git",
    "awpy @ git+https://github.com/mhso/awpy.git",
    "pytest>=8.4.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "playwright>=1.43.0",
]
[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_default_fixture_loop_scope = "function"